src/objects/Claim_Contact__c.object
<CustomObject>
    <fields>
        <fullName>Claims__c</fullName>
        <label>Claim</label>
        <referenceTo>MCAR_Claim_Management__c</referenceTo>
        <relationshipLabel>Claim Contacts</relationshipLabel>
        <relationshipName>Claim_Contacts1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <inlineHelpText>(Category Mgr, Manufacturer, and SQS are required)  Please submit a Change Request to request any modification to this list</inlineHelpText>
        <label>Contact Type</label>
        <picklist>
            <picklistValues>
                <fullName>BPO Commercial Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BPO Contract Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BPO Performance Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Category Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cost Analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Factory SQE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance &amp; Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal &amp; Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MEX Buyer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SQM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supplier Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Analysis</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <label>Claim Contact</label>
    <nameField>
        <displayFormat>CC-{00000}</displayFormat>
        <label>Claim Contact Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Claim Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>